--- a/MEF.DI/WPF/Views/UserControls/CustomerListView.xaml
+++ b/MEF.DI/WPF/Views/UserControls/CustomerListView.xaml
@@ -5,8 +5,31 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WPF.Views.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="200" d:DesignWidth="360">
+    <UserControl.Resources>
+        <DataTemplate x:Key="MyDataTemplate">
+            <StackPanel Orientation="Vertical" Margin="0,0,5,0">
+                <TextBlock Text="{Binding Name}" FontFamily="Segoe UI" FontSize="22" Foreground="Gray" />
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="{Binding Email}" FontFamily="Segoe UI" FontSize="22" Foreground="Gray" />
+                    <TextBlock Text="  " />
+                    <TextBlock Text="{Binding Twitter}" FontFamily="Segoe UI" FontSize="22" Foreground="Gray" />
+                </StackPanel>
+            </StackPanel>
+        </DataTemplate>
+    </UserControl.Resources>
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0" Text="Customer List View"
+                   FontFamily="Segoe UI" FontSize="32" Foreground="LightSteelBlue"
+                   Margin="6"/>
+        <ItemsControl Grid.Row="1" Margin="6" 
+                      ItemsSource="{Binding CustomersModel}" 
+                      ItemTemplate="{StaticResource MyDataTemplate}" />
+
     </Grid>
 </UserControl>
