--- a/MEF.DI/WPF/Views/UserControls/CustomerView.xaml
+++ b/MEF.DI/WPF/Views/UserControls/CustomerView.xaml
@@ -7,6 +7,18 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0" Text="Customer View"
+                   FontFamily="Segoe UI" FontSize="32" Foreground="LightSteelBlue"
+                   Margin="6"/>
+        <StackPanel Orientation="Vertical" Grid.Row="1" Margin="6">
+            <TextBlock Text="{Binding CustomerModel.Name}" FontFamily="Segoe UI" FontSize="22" Foreground="Gray" />
+            <TextBlock Text="{Binding CustomerModel.Email}" FontFamily="Segoe UI" FontSize="22" Foreground="Gray" />
+            <TextBlock Text="{Binding CustomerModel.Twitter}" FontFamily="Segoe UI" FontSize="22" Foreground="Gray" />
+        </StackPanel>
+
     </Grid>
 </UserControl>
