--- a/MEF.DI/WPF/App.xaml
+++ b/MEF.DI/WPF/App.xaml
@@ -2,8 +2,17 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPF"
+             xmlns:vm="clr-namespace:WPF.ViewModels"
+             xmlns:v="clr-namespace:WPF.Views"
+             xmlns:controls="clr-namespace:WPF.Views.UserControls"
              StartupUri="Views\MainWindow.xaml">
     <Application.Resources>
-         
+        <DataTemplate DataType="{x:Type vm:CustomerViewModel}">
+            <controls:CustomerView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:CustomerListViewModel}">
+            <controls:CustomerListView/>
+        </DataTemplate>
+
     </Application.Resources>
 </Application>
